# student-affairs-chatbot

./: .dockerignore  .env.example  CONTEXT.md  Dockerfile  README.md  __init__.py  app.py  chatbot.py  config.py  docker-compose.prod.yml  docker-compose.yml  load_offline_model.py  pdf_parser.py  pyproject.toml  pytest.ini  query_handler.py  requirements.txt  test-multiple-embeddings.py  text_splitter.py  vector_store.py
app/: __init__.py  api.py  api_client.py  auth.py  chatbot-local.py  chatbot.py  chatbot_local.py  conversation.py  embeddings.py  guardrails.py  llm.py  llm_judge.py  ollama_client.py  query_handler.py  ratelimit.py  retrieval.py  storage.py
app/api/: api.py
app/client/: api_client.py  ollama_client.py
config/: __init__.py  settings.py
config/prompts/: system_prompt.txt  system_prompt2.txt
deploy/: README.md  nginx.conf
docs/adr/: 0001-vector-store-seam.md  0002-one-llm-seam.md  0003-docker-first.md
indexing/: __init__.py  bm25.py  text_splitter.py  vectorizer.py
preprocessing/: __init__.py  check_updates.py  extraction.py
preprocessing/indexing/: __init__.py  bm25.py  text_splitter.py  (+1 more)
scripts/: compare_embeddings.py  compare_embeddings_openrouter.py  dev.sh
tests/: __init__.py  conftest.py  test-llm-judge.py  test.py  test_auth.py  test_bm25.py  test_conversation.py  test_extraction.py  test_faq_scraper.py  test_guardrails.py  test_judge.py  test_llm_judge.py  test_multiple_embeddings.py  test_ratelimit.py  test_retriever.py  test_storage.py  test_title.py  test_vectorizer.py
web/: admin.html  app.js  index.html  style.css
(+141 files in other folders)
